FIX: Login form overflowing on small screens

--- a/nanposweb/static/custom.css
+++ b/nanposweb/static/custom.css
@@ -2,6 +2,11 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+main {
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 main > .container {
     padding-top: 9px;
     padding-bottom: 65px;
